--- a/CityInfo/CityInfo/CityInfo.csproj
+++ b/CityInfo/CityInfo/CityInfo.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.5.2" />
   </ItemGroup>
 
 </Project>
