Error en el Startup y controlador Fake

--- a/CityInfo/CityInfo/appSettings.json
+++ b/CityInfo/CityInfo/appSettings.json
@@ -1,7 +1,6 @@
 {
-  "mailSettings": 
-  {
-    "mailToAddress": "magefra9@hotmail.com",
-    "mailFromAddress": "magefra9@hotmail.com"
+  "mailSettings": {
+    "mailToAddress": "developer@mycompany.com",
+    "mailFromAddress": "noreply@mycompany.com"
   }
 }
