--- a/CityInfo/CityInfo/CityInfo.csproj
+++ b/CityInfo/CityInfo/CityInfo.csproj
@@ -12,7 +12,10 @@
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Nemi.Extensions.Configuration.Yaml" Version="1.0.1" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.5.2" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appSettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
